--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: welcome@123
+  password: root
   socket: /var/run/mysqld/mysqld.sock
   database: company
 
