--- a/test/fixtures/college_addresses.yml
+++ b/test/fixtures/college_addresses.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  landline_number: MyString
+  address1: MyString
+  address2: MyString
+  pin_code: one
+
+two:
+  landline_number: MyString
+  address1: MyString
+  address2: MyString
+  pin_code: two
