--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ default: &default
   username: root
   password: root
   socket: /var/run/mysqld/mysqld.sock
-  database: company
+  database: college
 
 development:
   <<: *default
@@ -26,7 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: company_test
+  database: college_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
