--- a/test/fixtures/invitations.yml
+++ b/test/fixtures/invitations.yml
@@ -2,10 +2,12 @@
 
 one:
   campus: one
-  opening_id: 1
+  opening_id: 
   user: one
+  accepted: false
 
 two:
   campus: two
-  opening_id: 1
+  opening_id: 
   user: two
+  accepted: false
